--- a/web2/web2/web2/web2.csproj
+++ b/web2/web2/web2/web2.csproj
@@ -112,6 +112,7 @@
   <ItemGroup>
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\AboutUsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ProfileController.cs" />
     <Compile Include="Global.asax.cs">
@@ -125,6 +126,7 @@
     <Compile Include="Models\Image.cs" />
     <Compile Include="Models\Like.cs" />
     <Compile Include="Models\Location.cs" />
+    <Compile Include="Models\Owner.cs" />
     <Compile Include="Models\Rating.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -146,6 +148,8 @@
     <Content Include="Views\Profile\Event.cshtml" />
     <Content Include="Views\Profile\EventGallery.cshtml" />
     <Content Include="Views\Home\Event.cshtml" />
+    <Content Include="Views\AboutUs\Index.cshtml" />
+    <Content Include="Views\AboutUs\More.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
